# porla

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .npmignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.build-env  GitVersion.yml  LICENSE  README.md  builder-env.sh  config.example.toml  devenv.nix  i18n.js  index.js  lerna.json  package-lock.json  package.json  tsconfig.json  tsconfig.vite.json  vcpkg.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json  setup.sh  starship-config.toml
.github/workflows/: beta.yaml  build-deploy.yaml  ci.yaml  pr.yml  release.yml
cmake/: Duktape.cmake  FileEmbed.cmake  FindANTLR4.cmake  Findduktape.cmake  GenerateVersion.cmake
docs/source/: conf.py  getting-started.rst  index.rst
docs/source/getting-started/: configuration.rst  installing.rst
html/: .editorconfig  README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
html/src/: App.tsx  Index.tsx  auth.tsx  base.ts  index.css  main.tsx  routeTree.gen.ts  theme.ts
html/src/components/: AddTorrentModal.tsx  AppErrorModal.tsx  CollapsibleSection.tsx  FilterItem.tsx  MockData.tsx  MoveTorrentModal.tsx  Pager.tsx  ProgressBar.tsx  Query.tsx  RemoveTorrentModal.tsx  SettingsDrawer.tsx  TorrentPropertiesModal.tsx  TorrentsList.tsx  TorrentsListItem.tsx  TorrentsTable.tsx
html/src/contexts/: TorrentsFilterContext.tsx  auth.tsx  ninja.tsx
html/src/pages/: Home.tsx  Login.tsx  Plugins.tsx  Settings.tsx  Setup.tsx  TorrentsList.tsx
html/src/routes/: __root.tsx  _auth.tsx  login.tsx
html/src/services/: auth.ts  index.ts  jsonrpc.ts
html/src/types/: index.d.ts  index.tsx
languages/: en.js  es.js  fr.js  index.js
lib/: async-fs.js  asyncEventEmitter.js  config.js  logger.js  plugin.js  porla.js  proxyType.js  session.js  subscription.js  torrent.js
scripts/: setup-env.sh
src/: authinithandler.cpp  authinithandler.hpp  authloginhandler.cpp  authloginhandler.hpp  buildinfo.cpp  buildinfo.hpp  cmdargs.cpp  cmdargs.hpp  config.cpp  config.hpp  crashpad.cpp  crashpad.hpp  embeddedwebuihandler.cpp  embeddedwebuihandler.hpp  httpauthtokenhandler.cpp  httpauthtokenhandler.hpp  httpclient.cpp  httpclient.hpp  httpcontext.hpp  httpeventstream.cpp  httpeventstream.hpp  httpjwtauth.cpp  httpjwtauth.hpp  httpmiddleware.hpp  httpserver.cpp  httpserver.hpp  httpsession.cpp  httpsession.hpp  jsonrpchandler.cpp  jsonrpchandler.hpp  logger.cpp  logger.hpp  main.cpp  metricshandler.cpp  metricshandler.hpp  session.cpp  session.hpp  sessions.cpp  sessions.hpp  settingspack.cpp  (+14 more)
src/actions/: action.hpp  actioncallback.hpp  executor.cpp  executor.hpp  forcereannounce.cpp  forcereannounce.hpp  log.cpp  log.hpp  move.cpp  move.hpp  sleep.cpp  sleep.hpp
src/data/: migrate.cpp  migrate.hpp  statement.cpp  statement.hpp
src/http/: authinithandler.cpp  authinithandler.hpp  authloginhandler.cpp  authloginhandler.hpp  eventshandler.cpp  eventshandler.hpp  handler.hpp  jsonrpchandler.cpp  jsonrpchandler.hpp  jwthandler.cpp  jwthandler.hpp  metricshandler.cpp  metricshandler.hpp  systemhandler.cpp  systemhandler.hpp  webuihandler.cpp  webuihandler.hpp
src/json/: all.hpp  fsspace.hpp  ltannounceentry.hpp  lterrorcode.hpp  ltinfohash.hpp  ltpeerinfo.hpp  ltsettingspack.hpp  lttorrentflags.hpp  lttorrentstatus.hpp  mediainfo.hpp  pluginsconfigure.hpp  pluginsget.hpp  pluginsinstall.hpp  pluginslist.hpp  pluginsreload.hpp  pluginsuninstall.hpp  pluginsupdate.hpp  presetsadd.hpp  presetsget.hpp  presetslist.hpp  presetsremove.hpp  presetsupdate.hpp  sessionpause.hpp  sessionresume.hpp  sessionsadd.hpp  sessionsettingsget.hpp  sessionsettingsupdate.hpp  sessionslist.hpp  sessionspause.hpp  sessionsremove.hpp  sessionsresume.hpp  sessionssettingsget.hpp  sessionssettingsset.hpp  torrentclientdata.hpp  torrentsaddreq.hpp  torrentsaddres.hpp  torrentsfileslist.hpp  torrentsget.hpp  torrentslist.hpp  torrentslistres.hpp  (+21 more)
src/lua/: engine.cpp  engine.hpp  packages.hpp  plugin.cpp  plugin.hpp  pluginengine.cpp  pluginengine.hpp
src/mediainfo/: container.hpp  parser.cpp  parser.hpp
src/methods/: fsspace.cpp  fsspace.hpp  fsspace_reqres.hpp  method.hpp  pluginsinstall.cpp  pluginsinstall.hpp  pluginsinstall_reqres.hpp  pluginsuninstall.cpp  pluginsuninstall.hpp  pluginsuninstall_reqres.hpp  presetslist.cpp  presetslist.hpp  presetslist_reqres.hpp  sessionpause.cpp  sessionpause.hpp  sessionpause_reqres.hpp  sessionresume.cpp  sessionresume.hpp  sessionresume_reqres.hpp  sessionsettingslist.cpp  sessionsettingslist.hpp  sessionsettingslist_reqres.hpp  sessionsettingsupdate.cpp  sessionsettingsupdate.hpp  sessionsettingsupdate_reqres.hpp  sysversions.cpp  sysversions.hpp  torrentsadd.cpp  torrentsadd.hpp  torrentsaddreq.hpp  torrentsaddres.hpp  torrentsfileslist.cpp  torrentsfileslist.hpp  torrentsfileslist_reqres.hpp  torrentsget.cpp  torrentsget.hpp  torrentsget_reqres.hpp  torrentslist.cpp  torrentslist.hpp  torrentslist_reqres.hpp  (+49 more)
src/porla/: logger.ts  main.ts  migrate.ts  migrator.ts  porla.ts  router.ts  session.ts
src/query/: PorlaQueryLang.g4  pql.cpp  pql.hpp
src/tools/: authtoken.cpp  authtoken.hpp  generatesecretkey.cpp  generatesecretkey.hpp  mediainfoparse.cpp  mediainfoparse.hpp  versionjson.cpp  versionjson.hpp
src/utils/: base64.hpp  eta.cpp  eta.hpp  ltsettings.cpp  ltsettings.hpp  ratio.cpp  ratio.hpp  secretkey.cpp  secretkey.hpp  string.cpp  string.hpp  yaml.cpp  yaml.hpp
src/webapp/: index.html
src/workflows/: action.hpp  actionfactory.cpp  actionfactory.hpp  contextprovider.hpp  executor.cpp  executor.hpp  step.hpp  textrenderer.cpp  textrenderer.hpp  torrentcontextprovider.cpp  torrentcontextprovider.hpp  workflow.cpp  workflow.hpp
test/: asyncEventEmitter.js  porla.js
tests/: inmemorysession.cpp  inmemorysession.hpp  main.cpp  run_tests.sh
tests/hurl/: 001_plugins_install_frompath.hurl  001_sessions.hurl  002_plugins.hurl  002_plugins_install_fromzip.hurl
tests/query/: pql.cpp
tests/utils/: string.cpp
tests/workflows/: executor.cpp  textrenderer.cpp  workflow.cpp
(+284 files in other folders)
